<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/poster_imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/poster_height"
            android:adjustViewBounds="true"
            android:background="@drawable/movie_placeholder"
            android:contentDescription="@string/content_desc_movie_title"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_textView"
            style="@style/MoviePosterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/favorite_imageView"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster_imageView"
            tools:text="Movie title" />

        <ImageView
            android:id="@+id/favorite_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc_movie_poster"
            android:padding="@dimen/default_padding"
            android:src="@drawable/ic_baseline_favorite_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/title_textView"
            app:layout_constraintTop_toBottomOf="@id/poster_imageView"
            app:tint="@color/colorRed" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.MaterialRatingBar.RatingBar.Indicator.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_textView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/no_rating_textView"
            style="@style/MovieNoRatingAvailableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_rating_count"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>