<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="@dimen/default_padding"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/poster_imageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_desc_movie_poster"
                android:scaleType="centerCrop"
                android:src="@drawable/movie_placeholder"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5" />

            <TextView
                android:id="@+id/genres_textView"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginBottom="@dimen/small_padding"
                android:textColor="@android:color/white"
                tools:text="Action, Adventure, Sci-Fi" />

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_layout" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding">

            <androidx.constraintlayout.widget.Group
                android:id="@+id/retry_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="emptyDetails_textView, retry_button" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/overview_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="overview_caption_textView, overview_textView" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/director_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="director_caption_textView, director_textView" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/cast_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="cast_caption_textView, cast_textView" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/reviews_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="reviews_caption_textView, review1, review2" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/similarMovies_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="similarMovies_caption_textView, similarMovies_recyclerView" />

            <TextView
                android:id="@+id/date_textView"
                style="@style/MovieDetails.Context.Special"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="6 March 2018" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.MaterialRatingBar.RatingBar.Indicator.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_textView" />

            <ImageView
                android:id="@+id/favorite_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/added_to_favorites"
                android:padding="@dimen/default_padding"
                android:src="@drawable/ic_baseline_favorite_border"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorRed" />

            <TextView
                android:id="@+id/overview_caption_textView"
                style="@style/MovieDetails.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_CAPS"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingBar" />

            <TextView
                android:id="@+id/overview_textView"
                style="@style/MovieDetails.Context"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overview_caption_textView"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam velit est, placerat et mauris sollicitudin, mollis tincidunt odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam blandit dictum enim, vel fringilla felis " />

            <TextView
                android:id="@+id/director_caption_textView"
                style="@style/MovieDetails.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/director_CAPS"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview_textView" />

            <TextView
                android:id="@+id/director_textView"
                style="@style/MovieDetails.Context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/director_caption_textView"
                tools:text="J.A. Bayona" />

            <TextView
                android:id="@+id/cast_caption_textView"
                style="@style/MovieDetails.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cast_CAPS"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/director_textView" />

            <TextView
                android:id="@+id/cast_textView"
                style="@style/MovieDetails.Context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast_caption_textView"
                tools:text="Chris Pratt, Chris Pratt, Chris Pratt, Chris Pratt" />

            <TextView
                android:id="@+id/similarMovies_caption_textView"
                style="@style/MovieDetails.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/similar_movies_CAPS"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast_textView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similarMovies_recyclerView"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/small_padding"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/similarMovies_caption_textView"
                tools:itemCount="5"
                tools:listitem="@layout/list_item_similar_movie" />

            <TextView
                android:id="@+id/reviews_caption_textView"
                style="@style/MovieDetails.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews_CAPS"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/similarMovies_recyclerView" />

            <include
                android:id="@+id/review1"
                layout="@layout/include_review_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviews_caption_textView" />

            <include
                android:id="@+id/review2"
                layout="@layout/include_review_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/review1" />

            <TextView
                android:id="@+id/emptyDetails_textView"
                style="@style/MovieDetails.Context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_details_found"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingBar"
                app:layout_constraintVertical_bias="0.25" />

            <Button
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_again"
                app:layout_constraintEnd_toEndOf="@id/emptyDetails_textView"
                app:layout_constraintStart_toStartOf="@id/emptyDetails_textView"
                app:layout_constraintTop_toBottomOf="@id/emptyDetails_textView" />

            <ProgressBar
                android:id="@+id/loading"
                style="@style/MovieDetails.Loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>